# wetwire-core-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: FAQ.md
src/wetwire_core/: __init__.py  agents.py  runner.py
src/wetwire_core/agent/: __init__.py  orchestrator.py  personas.py  results.py  scoring.py
src/wetwire_core/cli/: __init__.py
src/wetwire_core/kiro/: __init__.py
src/wetwire_core/mcp/: __init__.py
src/wetwire_core/providers/: __init__.py
tests/: __init__.py  test_agents.py  test_cli.py  test_kiro.py  test_mcp.py  test_providers.py  test_runner.py
tests/agent/: test_orchestrator.py  test_personas.py  test_results.py  test_scoring.py
