[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wetwire-core"
version = "1.0.0"
description = "Shared agent infrastructure for wetwire domain packages"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "wetwire contributors" }
]
keywords = ["infrastructure", "testing", "agent", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ty>=0.0.1",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/lex00/wetwire-core-python"
Repository = "https://github.com/lex00/wetwire-core-python"

[tool.hatch.build.targets.wheel]
packages = ["src/wetwire_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
